Fix alignment of grid size menu options
Change unordered list and items to divs in a flexbox

Update css styles for divs to align to left edge of dropdown menu button

--- a/styles.css
+++ b/styles.css
@@ -57,9 +57,11 @@ body {
 
 
 .option {
-  list-style-type: none;
-  padding-top: 24px;
-  width: 200px;
+  margin-left: -40px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  width: 240px;
+  font-size: 18px;
 }
 
 .option:hover {
